feat: split sign up and login
